Add whoami route
