# docs/swagger.json
@@ -2001,6 +2001,38 @@
                 "summary": "Get list of sexes",
                 "responses": {}
             }
+        },
+        "/user/whoami": {
+            "get": {
+                "description": "Рут вернет данные о пользователе из БД",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "Получить информацию о пользователе",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -2406,7 +2438,7 @@
             "type": "object",
             "properties": {
                 "checkDate": {
-                    "description": "Дата конрольной дойки",
+                    "description": "Дата контрольной дойки",
                     "allOf": [
                         {
                             "$ref": "#/definitions/models.DateOnly"
@@ -2414,7 +2446,7 @@
                     ]
                 },
                 "dryMatter": {
-                    "description": "сухой материал",
+                    "description": "Сухой материал",
                     "type": "number"
                 },
                 "fat": {
@@ -2446,7 +2478,7 @@
                     "type": "integer"
                 },
                 "probeNumber": {
-                    "description": "номер пробы",
+                    "description": "Номер пробы",
                     "type": "integer"
                 },
                 "protein": {
@@ -2455,7 +2487,7 @@
                     "example": 1
                 },
                 "somaticNucCount": {
-                    "description": "количество соматических клеток",
+                    "description": "Количество соматических клеток",
                     "type": "number"
                 }
             }
@@ -2489,7 +2521,7 @@
                     "type": "integer"
                 },
                 "birthMethod": {
-                    "description": "способ зачатия: клон, эмбрион, искусственное осеменени, естественное осеменение",
+                    "description": "Способ зачатия: клон, эмбрион, искусственное осеменени, естественное осеменение",
                     "type": "string"
                 },
                 "breedId": {
@@ -2555,12 +2587,12 @@
                     "$ref": "#/definitions/models.Genetic"
                 },
                 "gradeHozId": {
-                    "description": "оценка по хозяйству",
+                    "description": "Оценка по хозяйству",
                     "type": "integer",
                     "example": 1
                 },
                 "gradeRegionId": {
-                    "description": "оценка по региону",
+                    "description": "Оценка по региону",
                     "type": "integer",
                     "example": 1
                 },
@@ -2581,7 +2613,7 @@
                     "example": 1
                 },
                 "identificationNumber": {
-                    "description": "он все-таки есть! это какой-то не российский номер коровы",
+                    "description": "Он все-таки есть! Это какой-то не российский номер коровы",
                     "type": "string"
                 },
                 "inbrindingCoeffByFamily": {
@@ -2865,7 +2897,7 @@
             "type": "object",
             "properties": {
                 "checkDate": {
-                    "description": "Дата конрольной дойки",
+                    "description": "Дата контрольной дойки",
                     "allOf": [
                         {
                             "$ref": "#/definitions/models.DateOnly"
@@ -2873,7 +2905,7 @@
                     ]
                 },
                 "dryMatter": {
-                    "description": "сухой материал",
+                    "description": "Сухой материал",
                     "type": "number"
                 },
                 "fat": {
@@ -2897,7 +2929,7 @@
                     "example": 1
                 },
                 "probeNumber": {
-                    "description": "номер пробы",
+                    "description": "Номер пробы",
                     "type": "integer"
                 },
                 "protein": {
@@ -2906,7 +2938,7 @@
                     "example": 1
                 },
                 "somaticNucCount": {
-                    "description": "количество соматических клеток",
+                    "description": "Количество соматических клеток",
                     "type": "number"
                 }
             }
@@ -2940,7 +2972,7 @@
                     "type": "integer"
                 },
                 "birthMethod": {
-                    "description": "способ зачатия: клон, эмбрион, искусственное осеменени, естественное осеменение",
+                    "description": "Способ зачатия: клон, эмбрион, искусственное осеменени, естественное осеменение",
                     "type": "string"
                 },
                 "breedId": {
@@ -2990,12 +3022,12 @@
                     "$ref": "#/definitions/models.Genetic"
                 },
                 "gradeHozId": {
-                    "description": "оценка по хозяйству",
+                    "description": "Оценка по хозяйству",
                     "type": "integer",
                     "example": 1
                 },
                 "gradeRegionId": {
-                    "description": "оценка по региону",
+                    "description": "Оценка по региону",
                     "type": "integer",
                     "example": 1
                 },
@@ -3012,7 +3044,7 @@
                     "example": 1
                 },
                 "identificationNumber": {
-                    "description": "он все-таки есть! это какой-то не российский номер коровы",
+                    "description": "Он все-таки есть! Это какой-то не российский номер коровы",
                     "type": "string"
                 },
                 "inbrindingCoeffByFamily": {
@@ -3143,7 +3175,7 @@
                     "type": "integer"
                 },
                 "path": {
-                    "description": "путь к документу относительно genmilk.ru/api/static/documents",
+                    "description": "Путь к документу относительно genmilk.ru/api/static/documents",
                     "type": "string"
                 }
             }
@@ -3152,11 +3184,11 @@
             "type": "object",
             "properties": {
                 "comment1": {
-                    "description": "Коментарий 1 (по всей видиости сюда что-то пришет врач)",
+                    "description": "Комментарий 1 (по всей видимости сюда что-то пришит врач)",
                     "type": "string"
                 },
                 "comment2": {
-                    "description": "Коментарий 2",
+                    "description": "Комментарий 2",
                     "type": "string"
                 },
                 "cowId": {
@@ -3164,7 +3196,7 @@
                     "type": "integer"
                 },
                 "dataResourse": {
-                    "description": "источник данных",
+                    "description": "Источник данных",
                     "type": "string"
                 },
                 "date": {
@@ -3176,7 +3208,7 @@
                     ]
                 },
                 "daysFromLactation": {
-                    "description": "дни от начала лактации",
+                    "description": "Дни от начала лактации",
                     "type": "integer"
                 },
                 "eventType": {
@@ -3186,18 +3218,18 @@
                     "$ref": "#/definitions/models.EventType"
                 },
                 "eventType1Id": {
-                    "description": "стандартизированная название события",
+                    "description": "Стандартизированная название события",
                     "type": "integer"
                 },
                 "eventType2": {
                     "$ref": "#/definitions/models.EventType"
                 },
                 "eventType2Id": {
-                    "description": "стандартизированное разновидность события",
+                    "description": "Стандартизированное разновидность события",
                     "type": "integer"
                 },
                 "eventTypeId": {
-                    "description": "стандартизированная группа события",
+                    "description": "Стандартизированная группа события",
                     "type": "integer"
                 },
                 "id": {
@@ -3209,7 +3241,7 @@
             "type": "object",
             "properties": {
                 "code": {
-                    "description": "код группы или разновидности или названия события",
+                    "description": "Код группы или разновидности или названия события",
                     "type": "integer"
                 },
                 "id": {
@@ -3305,6 +3337,7 @@
                     "type": "number"
                 },
                 "milkStrength": {
+                    "description": "100 бальные",
                     "type": "number"
                 },
                 "pelvicWidth": {
@@ -3353,7 +3386,7 @@
                     "type": "string"
                 },
                 "cowsCount": {
-                    "description": "количество коров",
+                    "description": "Количество коров",
                     "type": "integer"
                 },
                 "description": {
@@ -3365,7 +3398,7 @@
                     "type": "integer"
                 },
                 "email": {
-                    "description": "эл. почта",
+                    "description": "Эл. почта",
                     "type": "string"
                 },
                 "hozNumber": {
@@ -3384,7 +3417,7 @@
                     "type": "string"
                 },
                 "nameShort": {
-                    "description": "Краткое название хозйства",
+                    "description": "Краткое название хозяйства",
                     "type": "string"
                 },
                 "parrentId": {
@@ -3424,7 +3457,7 @@
                     }
                 },
                 "gtcFilePath": {
-                    "description": "путь к gtc файлу относительно genmilk.ru/api/static/gtc",
+                    "description": "Путь к gtc файлу относительно genmilk.ru/api/static/gtc",
                     "type": "string"
                 },
                 "id": {
@@ -3440,7 +3473,7 @@
                     "type": "string"
                 },
                 "resultDate": {
-                    "description": "Дата получения  результата",
+                    "description": "Дата получения результата",
                     "allOf": [
                         {
                             "$ref": "#/definitions/models.DateOnly"
@@ -3510,6 +3543,9 @@
         "models.Grade": {
             "type": "object",
             "properties": {
+                "cowID": {
+                    "type": "integer"
+                },
                 "ebvFat": {
                     "description": "Оценка жира по EBV",
                     "type": "number"
@@ -3531,7 +3567,7 @@
                     "type": "number"
                 },
                 "generalValue": {
-                    "description": "CowID           uint",
+                    "description": "Общая оценка по EBV",
                     "type": "number"
                 },
                 "id": {
@@ -3639,7 +3675,7 @@
                     "type": "integer"
                 },
                 "days": {
-                    "description": "количество дней, когда корова дает молоко",
+                    "description": "Количество дней, когда корова дает молоко",
                     "type": "integer"
                 },
                 "fat305": {
@@ -3727,18 +3763,18 @@
                     "type": "string"
                 },
                 "description": {
-                    "description": "описание партнера",
+                    "description": "Описание партнера",
                     "type": "string"
                 },
                 "email": {
-                    "description": "эл. почта",
+                    "description": "Эл. почта",
                     "type": "string"
                 },
                 "id": {
                     "type": "integer"
                 },
                 "logoPath": {
-                    "description": "путь к логотипу партнера относительно genmlik.ru/api/static/partners",
+                    "description": "Путь к логотипу партнера относительно genmlik.ru/api/static/partners",
                     "type": "string"
                 },
                 "name": {
@@ -3759,7 +3795,7 @@
                     "default": 1
                 },
                 "name": {
-                    "description": "название региона",
+                    "description": "Название региона",
                     "type": "string",
                     "example": "Усть-Каменский"
                 },
@@ -3770,7 +3806,7 @@
                     }
                 },
                 "regNum": {
-                    "description": "номер региона (Архангельская область = 29)",
+                    "description": "Номер региона (Архангельская область = 29)",
                     "type": "integer"
                 }
             }
@@ -3782,7 +3818,7 @@
                     "type": "integer"
                 },
                 "name": {
-                    "description": "название роли",
+                    "description": "Название роли",
                     "type": "string"
                 }
             }
@@ -3818,7 +3854,7 @@
                     "type": "string"
                 },
                 "hozNumber": {
-                    "description": "номер хоз-ва к которому привязвыается пользователь: либо существует, либо newHoz",
+                    "description": "Номер хоз-ва к которому привязвыается пользователь: либо существует, либо newHoz",
                     "type": "string"
                 },
                 "id": {
