# routes/user/user.go
@@ -1,6 +1,9 @@
 package user_create
 
-import "github.com/gin-gonic/gin"
+import (
+	"github.com/Popov-Dmitriy-Ivanovich/genmilk_backend/routes/auth"
+	"github.com/gin-gonic/gin"
+)
 
 type User struct {
 }
@@ -9,4 +12,6 @@ func (s *User) WriteRoutes(rg *gin.RouterGroup) {
 	apiGroup := rg.Group("/user")
 	apiGroup.POST("/create", s.Create())
 	apiGroup.GET("/verifyEmail", s.VerifyEmail())
+	apiGroup.Use(auth.AuthMiddleware(auth.Farmer, auth.FederalOff, auth.RegionalOff, auth.Admin))
+	apiGroup.GET("/whoami", s.Whoami())
 }
